// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PopupSyncAuth > Emits close > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Emits close > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Emits close > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Emits close > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Emits close > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncAuth > Emits close > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Emits close > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Emits close > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Emits close > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Mounts > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Mounts > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Mounts > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Mounts > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Mounts > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncAuth > Mounts > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Mounts > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Mounts > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Mounts > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Shows default error message when none provided > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Shows default error message when none provided > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Shows default error message when none provided > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Shows default error message when none provided > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Shows default error message when none provided > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncAuth > Shows default error message when none provided > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Shows default error message when none provided > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Shows default error message when none provided > syncState 1`] = `
{
  "appError": AppError {
    "code": 6,
    "display": {
      "form": true,
    },
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Shows default error message when none provided > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Shows error message > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Shows error message > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Shows error message > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Shows error message > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Shows error message > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncAuth > Shows error message > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Shows error message > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Shows error message > syncState 1`] = `
{
  "appError": AppError {
    "code": 6,
    "display": {
      "form": true,
    },
    "message": "Mock error",
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Shows error message > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > syncState 1`] = `
{
  "appError": AppError {
    "code": 6,
    "display": {
      "form": true,
      "sync": true,
    },
    "message": "Mock error",
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Validates fields > On login > KeyStore.getKey() 1`] = `CryptoKey {}`;

exports[`PopupSyncAuth > Validates fields > On login > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On login > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On login > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On login > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On login > Storage.get('USERNAME') 1`] = `"d"`;

exports[`PopupSyncAuth > Validates fields > On login > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
  [
    "request",
    {
      "name": "/auth/login",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "accessToken": "test-token",
        "username": "d",
      },
      "name": "set_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": true,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "note": {
          "content": {
            "body": "",
            "delta": {
              "ops": [],
            },
            "title": "",
          },
          "id": "id",
          "timestamp": 0,
        },
      },
      "name": "new_note",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "notes": [
          {
            "content": {
              "body": "",
              "delta": {
                "ops": [],
              },
              "title": "",
            },
            "id": "id",
            "timestamp": 0,
          },
        ],
      },
      "name": "sync_local_notes",
    },
  ],
]
`;

exports[`PopupSyncAuth > Validates fields > On login > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Validates fields > On login > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Validates fields > On login > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    {
      "content": {
        "body": "",
        "delta": {
          "ops": [],
        },
        "title": "",
      },
      "id": "id",
      "timestamp": 0,
    },
  ],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncAuth > Validates fields > On login > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Validates fields > On login > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Validates fields > On login > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": true,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "d",
}
`;

exports[`PopupSyncAuth > Validates fields > On login > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Validates fields > On signup > KeyStore.getKey() 1`] = `CryptoKey {}`;

exports[`PopupSyncAuth > Validates fields > On signup > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On signup > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On signup > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On signup > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On signup > Storage.get('USERNAME') 1`] = `"k"`;

exports[`PopupSyncAuth > Validates fields > On signup > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
  [
    "request",
    {
      "name": "/auth/signup",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "accessToken": "test-token",
        "username": "k",
      },
      "name": "set_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": true,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
]
`;

exports[`PopupSyncAuth > Validates fields > On signup > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Validates fields > On signup > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
    "k": "123456",
  },
}
`;

exports[`PopupSyncAuth > Validates fields > On signup > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncAuth > Validates fields > On signup > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Validates fields > On signup > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Validates fields > On signup > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": true,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "k",
}
`;

exports[`PopupSyncAuth > Validates fields > On signup > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
